--- a/src/app/pages/student/universities/universities.component.css
+++ b/src/app/pages/student/universities/universities.component.css
@@ -1,11 +1,11 @@
 /* Estilos generales */
-body {
+/* body {
   font-family: 'Roboto', sans-serif;
   background-color: #f9f9f9;
   margin: 0;
   padding: 0;
   color: #333;
-}
+} */
 
 /* Contenedor de filtros */
 .filters {
@@ -265,4 +265,58 @@ body {
   .universities li {
     margin-bottom: 25px;  /* Aumenta el espacio entre los recuadros en pantallas pequeñas */
   }
+}
+
+
+.top {
+  display: flex;
+  text-align: left;
+}
+
+.back-arrow {
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: 0.5s;
+  margin: 10px;
+}  
+
+img {
+  max-width: 100%;
+}
+
+.back-arrow:hover {
+  background-color: #0000003f;
+}
+
+
+h1 {
+  font-size: 24px;
+  color: #333;
+  margin-top: 10px;
+}
+
+
+p {
+  color: #777;
+  margin-bottom: 20px;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+  /* height: 85vh; */
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.main {
+  max-width: 400px;
+  width: 100%;
+  text-align: center;
+  font-family: Arial;
 }
