fix: correcion de titulo

--- a/src/app/pages/student/inicio/inicio.component.html
+++ b/src/app/pages/student/inicio/inicio.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="button" routerLink="/home/student/universities">
                     <img src="assets/images/career-icon.png" alt="Explorador de carreras">
-                    <p>Explorador de carreras</p>
+                    <p>Explorador de universidades</p>
                 </div>
                 <div class="button" routerLink="/home/student/appointment">
                     <img src="assets/images/appointment-icon.png" alt="Solicitar cita">
